docker(configuration): services ready
All the services asked are ready, the HTTP2 isn't supported for now, the configuration should be updated soon.

--- a/.env.dist
+++ b/.env.dist
@@ -1,10 +1,41 @@
-# This file is a "template" of which env vars need to be defined for your application
-# Copy this file to .env file for development, create environment variables when deploying to production
-# https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
-
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=9a2dc984c0900251370025462ca814ba
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS=localhost,example.com
 ###< symfony/framework-bundle ###
+
+#### Docker ############################################################################################################
+# Core configuration
+CONTAINER_NAME=cyclepath
+WORKPATH=/var/www/cyclepath
+BUILD_TARGET=base
+
+# Servers Ports
+NGINX_PORT=8080
+PHP_PORT=9000
+VARNISH_PORT=8000
+RABBITMQ_PORT=5672
+POSTGRES_DB=cyclepath
+POSTGRES_USER=cyclepath
+POSTGRES_PASSWORD=cyclepath
+POSTGRES_PORT=5432
+########################################################################################################################
+
+#### RabbitMQ ##########################################################################################################
+RABBITMQ_USER=cyclepath
+RABBITMQ_PASS=cyclepath
+########################################################################################################################
+
+##### Redis ############################################################################################################
+REDIS_PORT=6379
+REDIS_URL=redis://redis
+REDIS_HOST=redis
+########################################################################################################################
+
+#### Blackfire #########################################################################################################
+BLACKFIRE_SERVER_ID=test
+BLACKFIRE_SERVER_TOKEN=test
+BLACKFIRE_CLIENT_ID=test
+BLACKFIRE_CLIENT_TOKEN=test
+########################################################################################################################
