docker(HTTP): HTTP2 configuration
Nginx has been configured to use HTTP2.

Varnish is under configuration, the actual configuration isn't ready for usage due to backend fetch failure.

--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,11 +1,23 @@
+FROM alpine as core
+
+RUN apk add --no-cache openssl
+
+RUN openssl genrsa -des3 -passout pass:NotSecure -out cert.pass.key 2048
+RUN openssl rsa -passin pass:NotSecure -in cert.pass.key -out cert.key
+RUN rm cert.pass.key
+RUN openssl req -new -passout pass:NotSecure -key cert.key -out cert.csr \
+    -subj '/C=SS/ST=SS/L=Random Place/O=Cycle Path Dev/CN=localhost'
+RUN openssl x509 -req -sha256 -days 365 -in cert.csr -signkey cert.key -out cert.crt
+
 FROM nginx:alpine as base
 
 ARG WORKFOLDER
 
 ENV WORKPATH ${WORKFOLDER}
 
-## HTTP2
-RUN apk add --no-cache --virtual .build-deps zip zlib-dev curl git go
+RUN mkdir -p /etc/nginx/ssl
+
+COPY --from=core cert.key cert.crt /etc/nginx/ssl/
 
 COPY conf/core/core.conf /etc/nginx/nginx.conf
 
