--- a/docker/nginx/conf/development/cyclepath.conf
+++ b/docker/nginx/conf/development/cyclepath.conf
@@ -1,6 +1,14 @@
 server {
 
-    server_name cyclepath.test;
+    listen 80;
+    listen [::]:80;
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+
+    ssl_certificate /etc/nginx/ssl/cert.crt;
+    ssl_certificate_key /etc/nginx/ssl/cert.key;
+
+    return 301 https://$host$request_uri;
 
     root /var/www/cyclepath/public;
 
@@ -8,7 +16,6 @@ server {
         try_files $uri /index.php$is_args$args;
     }
 
-    # PROD
     location ~ ^/index\.php(/|$) {
         fastcgi_pass php-fpm:9000;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
@@ -16,7 +23,6 @@ server {
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         fastcgi_param DOCUMENT_ROOT $realpath_root;
         internal;
-
     }
 
     location ~ \.php$ {
