--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     },
     "require-dev": {
         "symfony/dotenv": "*",
-        "symfony/profiler-pack": "^1.0"
+        "symfony/profiler-pack": "^1.0",
+        "symfony/test-pack": "^1.0"
     },
     "config": {
         "preferred-install": {
@@ -24,12 +25,18 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/",
+            "App\\UI\\": "src/UI/",
+            "App\\UI\\Action\\": "src/UI/Action/",
+            "App\\UI\\Responder\\": "src/UI/Responder/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\Tests\\": "tests/"
+            "App\\Tests\\": "tests/",
+            "App\\Tests\\UI\\": "tests/UI/",
+            "App\\Tests\\UI\\Action\\": "tests/UI/Action/",
+            "App\\Tests\\UI\\Responder\\": "tests/UI/Responder/"
         }
     },
     "replace": {
