--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,16 @@
 {
+    "name": "guikingone/cyclepath",
+    "description": "The source code of CyclePath",
     "type": "project",
     "license": "proprietary",
+    "authors": [
+        {
+            "name": "Guillaume Loulier",
+            "email": "guillaume.loulier@hotmail.fr",
+            "homepage": "http://www.guillaumeloulier.fr",
+            "role": "Lead Developer"
+        }
+    ],
     "require": {
         "php": "^7.1.3",
         "ext-ctype": "*",
