frontend(UI & Intl): UI started & Intl started
The UI has been started (thanks to MDC and PWA principles).

The Intl has been started (thanks to the Symfony component).

--- a/.env.dist
+++ b/.env.dist
@@ -5,6 +5,10 @@ APP_SECRET=9a2dc984c0900251370025462ca814ba
 #TRUSTED_HOSTS=localhost,example.com
 ###< symfony/framework-bundle ###
 
+###> symfony/messenger ###
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+###< symfony/messenger ###
+
 #### Docker ############################################################################################################
 # Core configuration
 CONTAINER_NAME=cyclepath
