--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,22 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
         "sensio/framework-extra-bundle": "^5.2",
         "symfony/console": "*",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "*",
+        "symfony/mercure": "^0.1.0",
+        "symfony/mercure-bundle": "^0.1.0",
+        "symfony/messenger": "*",
         "symfony/monolog-bundle": "^3.3",
+        "symfony/translation": "*",
+        "symfony/web-link": "*",
+        "symfony/webpack-encore-pack": "^1.0",
         "symfony/yaml": "*"
     },
     "require-dev": {
+        "phpstan/phpstan": "^0.10.5",
         "symfony/dotenv": "*",
         "symfony/profiler-pack": "^1.0",
         "symfony/test-pack": "^1.0"
