--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -1,3 +1,6 @@
 controllers:
     resource: ../../src/UI/Action/
     type: annotation
+    prefix: /{_locale}
+    defaults:
+        _locale: '%locale%'
