--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
     "devDependencies": {
         "@symfony/webpack-encore": "^0.20.0",
         "autoprefixer": "^9.3.1",
+        "babel-core": "6",
+        "babel-loader": "7",
+        "babel-plugin-transform-object-assign": "^6.22.0",
+        "babel-preset-es2015": "^6.24.1",
         "css-loader": "^1.0.0",
         "extract-loader": "^3.0.0",
         "file-loader": "^2.0.0",
@@ -22,9 +26,14 @@
         "@material/button": "^0.40.1",
         "@material/drawer": "^0.40.1",
         "@material/elevation": "^0.40.1",
+        "@material/form-field": "^0.41.0",
         "@material/layout-grid": "^0.40.1",
         "@material/list": "^0.40.1",
+        "@material/textfield": "^0.41.0",
         "@material/theme": "^0.40.1",
-        "@material/top-app-bar": "^0.40.1"
+        "@material/top-app-bar": "^0.40.1",
+        "@polymer/lit-element": "^0.6.2",
+        "@webcomponents/webcomponentsjs": "^2.1.3",
+        "copy-webpack-plugin": "^4.5.4"
     }
 }
