feat(style & CI): Components started for the homepage & CI started via Azure
The components for the homepage has been started.

The Azure CI has been configured for PHP image.

--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "symfony/mercure-bundle": "^0.1.0",
         "symfony/messenger": "*",
         "symfony/monolog-bundle": "^3.3",
+        "symfony/security-bundle": "*",
         "symfony/translation": "*",
         "symfony/validator": "*",
         "symfony/web-link": "*",
