--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@material/button": "^0.40.1",
         "@material/drawer": "^0.40.1",
         "@material/elevation": "^0.40.1",
+        "@material/floating-label": "^0.41.0",
         "@material/form-field": "^0.41.0",
         "@material/layout-grid": "^0.40.1",
         "@material/list": "^0.40.1",
