ci(ACR): push configuration
The push configuration has been started.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,3 +14,5 @@ steps:
     displayName: 'PHP image push'
     inputs:
       azureContainerRegistry: cyclepath.azurecr.io
+      imageName: 'cyclepath.azurecr.io/portfolio:$(Build.BuildId)'
+      command: push
