ci(ACR): Image name
The image name has been updated.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,5 +14,5 @@ steps:
     displayName: 'PHP image push'
     inputs:
       azureContainerRegistry: cyclepath.azurecr.io
-      imageName: 'cyclepath.azurecr.io/portfolio:$(Build.BuildId)'
+      imageName: 'cyclepath.azurecr.io/cyclepath-php:$(Build.BuildId)'
       command: push
