--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,5 +14,5 @@ steps:
     displayName: 'PHP image push'
     inputs:
       azureContainerRegistry: cyclepath.azurecr.io
-      imageName: 'cyclepath.azurecr.io/cyclepath-php:$(Build.BuildId)'
+      imageName: 'cyclepath-php:$(Build.BuildId)'
       command: push
