--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,11 +3,12 @@ pool:
 
 variables:
   image_name: 'cyclepath-php'
+  image_cache: 'cyclepath.azurecr.io/cyclepath-php:$(Build.BuildId)'
   work_path: '/var/www/cyclepath'
   target: 'production'
 
 steps:
-  - script: docker build -f Dockerfile -t $(image_name) --build-arg WORKFOLDER=$(work_path) --target $(target) .
+  - script: docker build -f Dockerfile -t $(image_name) --build-arg WORKFOLDER=$(work_path) --target $(target) --cache-from=$(image_cache) .
     displayName: 'PHP image build'
 
   - task: Docker@1
