ci(e2e & GCP): e2e tests started with Panther & GCP configured for image
The e2e tests has been started with Panther (thanks to recent configuration fix).

The image build has been moved to GCP Cloud Builder.

Webpack configuration has been updated.

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -17,8 +17,10 @@
         <!-- define your env variables for the test env here -->
 
         <!-- ###+ symfony/messenger ### -->
-        <!-- MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages -->
+        <env name="MESSENGER_TRANSPORT_DSN" value="amqp://cyclePath:cyclePath@rabbit_mq/%2f/messages" />
         <!-- ###- symfony/messenger ### -->
+
+        <env name="REDIS_DSN" value="redis://redis" />
     </php>
 
     <testsuites>
@@ -35,5 +37,6 @@
 
     <listeners>
         <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener" />
+        <listener class="Symfony\Component\Panther\ServerListener" />
     </listeners>
 </phpunit>
