--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@material/top-app-bar": "^0.40.1",
         "@polymer/lit-element": "^0.6.2",
         "@webcomponents/webcomponentsjs": "^2.1.3",
-        "copy-webpack-plugin": "^4.5.4"
+        "copy-webpack-plugin": "^4.5.4",
+      "@material/ripple": "latest"
     }
 }
